--- a/Home.html
+++ b/Home.html
@@ -13,3 +13,5 @@
   <p>JetBlue is now available for view. Ticket purchases are not yet available.</p>
   <p style=color:red;>Warning: Due to COVID-19, non-canadians are not alowed to transit or enter canada.</p>
   <p style=color:red;>Warning: Due to COVID-19, you may not be able to book seats next to 2 or more people.</p>
+  
+  <p> ReckJet is still in development. If you are intrested in helping, plese contact the CEO at christopherhui0719@gmail.com.
